2024-09-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-val.h: Remove spurious definition of
	pvm_make_mapinfo.

2024-09-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ras: Support IOS_F_* constants as RAS values.
	* libpoke/pkl-asm.pks (remap): Do not remap in non-volatile
	read-only IO spaces.

2024-09-19  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pvm/pvm-insns-test.pk: Add test for iovolatile.

2024-09-19  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-info.pk (pk_info_ios): Fix printing of the type of
	IO spaces in table.

2024-09-19  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/ios-dev.h (struct ios_dev_if): New field
	volatile_by_default.
	* libpoke/libpoke.h (struct pk_iod_if): Likewise.
	* libpoke/ios.c (struct ios): New field volatile_p.
	(ios_open): Initialize volatile_p in newly opened IO space.
	(ios_volatile_p): Define.
	* libpoke/ios-dev-file.c (ios_dev_file_volatile_by_default):
	Define.
	(ios_dev_file): Set volatile_by_default.
	(ios_dev_file_convert_flags): Ignore IOS_F_VOLATILE.
	* libpoke/ios-dev-mem.c (ios_dev_mem_volatile_by_default): Define.
	(ios_dev_mem): Set volatile_by_default.
	* libpoke/ios-dev-mmap.c (ios_dev_mmap_volatile_by_default):
	Define.
	(ios_dev_mmap): set volatile_by_default.
	* libpoke/ios-dev-nbd.c (ios_dev_nbd_volatile_by_default): Define.
	(ios_dev_nbd): Set volatile_by_default.
	* libpoke/ios-dev-proc.c (ios_dev_proc_volatile_by_default):
	Define.
	(ios_dev_proc): Set volatile_by_default.
	* libpoke/ios-dev-stream.c (ios_dev_stream_volatile_by_default):
	Define.
	(ios_dev_stream): Set volatile_by_default.
	* libpoke/ios-dev-sub.c (ios_dev_sub_volatile_by_default): Define.
	(ios_dev_sub): Set volatile_by_default.
	* libpoke/ios-dev-zero.c (ios_dev_zero_volatile_by_default):
	Define.
	(ios_dev_zero): Define volatile_by_default.
	* libpoke/pvm.jitter (iogetv): New instruction.
	* libpoke/pkl-rt.pk (ioisvolatile): New function.
	(IOS_F_VOLATILE): Define.